# envgen

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SCHEMA_CHANGELOG.md  biome.json  build.rs  git-cliff.toml  prd-interactive.md  prd.md  schema.md  source_names.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  conventional-commits.yml  homebrew-tap-pr.yml  publish-fallback.yml  release.yml
docs/adr/: 0001-add-docs-command.md  0002-runtime-json-schema-validation.md  0002-source-resolver-doc-fields.md  0003-add-readme-command.md  0003-runtime-jsonschema-crate-validation.md  0004-hard-source-timeout-terminates-source-commands.md  0005-drop-schema-v1-support.md  0006-pull-non-interactive-manual-resolution.md  0007-restore-pull-interactive-manual-prompts.md  0008-pull-transactional-writes-with-write-on-error.md  0009-trusted-publishing-for-crates-io.md  0010-decouple-crate-and-schema-versioning.md  0011-raise-msrv-for-rustsec-time-fix.md  0012-unify-ci-release-and-precommit-conventions.md  0013-separate-homebrew-tap-release-flow.md  0014-run-homebrew-tap-pr-workflow-on-macos.md  0015-explicit-dispatch-homebrew-tap-pr-from-release.md  0016-raise-msrv-to-1.91.1-for-cargo-msrv-0.19.md  AGENTS.md
docs/superpowers/plans/: 2026-04-27-envgen-push.md
docs/superpowers/specs/: 2026-04-27-envgen-push-design.md
schemas/: envgen.sample.yaml  envgen.schema.v0.1.0.json
scripts/: version_bump.py
scripts/homebrew/: tap_release.py
scripts/release/: publish_crate.sh  validate_tag.py
src/: main.rs  output.rs  template.rs
src/commands/: check.rs  docs.rs  init.rs  list.rs  mod.rs  pull.rs  push.rs  readme.rs  schema.rs
src/resolver/: command_source.rs  manual_source.rs  mod.rs  static_source.rs
src/schema/: mod.rs  parser.rs  structural.rs  types.rs  validation.rs  validator.rs
tests/: test_check.rs  test_docs.rs  test_init.rs  test_list.rs  test_pull.rs  test_push.rs  test_readme.rs  test_schema.rs  test_template.rs
tests/fixtures/: broken_static_template.yaml  invalid_schema.yaml  invalid_schema_with_side_effect.yaml  manual_only_schema.yaml  manual_schema.yaml  missing_destination.yaml  mixed_optional_command_failure.yaml  mixed_required_command_failure.yaml  optional_failing_command.yaml  push_basic.yaml  required_failing_command.yaml  semantic_invalid_schema.yaml  static_template_unresolved.yaml  timeout_side_effect.yaml  valid_backend.yaml  valid_frontend.yaml
