[package]
name = "envgen"
version = "0.1.0"
edition = "2021"
description = "Environment file generator CLI — generate .env files from declarative YAML schemas"
readme = "README.md"
repository = "https://github.com/smorinlabs/envgen"
license = "MIT"
keywords = ["dotenv", "env", "yaml", "schema", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.83"

include = [
    "src/**",
    "schemas/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = { version = "0.18", features = ["draft202012"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
comfy-table = "=7.1.0"  # Pin to avoid edition2024 requirement
time = "=0.3.45"  # Pin to avoid edition2024 requirement
dialoguer = "0.11"
colored = "2"
anyhow = "1"
regex = "1"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[package.metadata.cargo-machete]
ignored = ["time"]  # Pinned to control transitive dependency version
